Fix record package compatibility issue - update to v6.1.2
- Updated record package from 5.1.2 to 6.1.2 to resolve record_linux startStream implementation error
- Added OpenAI service integration for TTS and Whisper
- Added voice service for audio recording and playback
- Updated Android and iOS configurations
- Added documentation files for OpenAI and translation flows

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>ChatMeal needs access to your microphone to record your voice for OpenAI Whisper speech recognition</string>
 </dict>
 </plist>
