--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,16 @@ dependencies:
   
   # URL launcher for external links
   url_launcher: ^6.3.1
+  
+  # HTTP client for API calls
+  http: ^1.2.2
+  
+  # Audio recording for OpenAI Whisper
+  record: ^6.1.2
+  path_provider: ^2.1.5
+  
+  # Audio player for OpenAI TTS
+  just_audio: ^0.9.40
 
 dev_dependencies:
   flutter_test:
