--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,20 @@ dependencies:
   cupertino_icons: ^1.0.8
   
   # Navigation
-  go_router: ^14.2.7
+  go_router: ^17.0.1
   
   # Local storage for onboarding and auth state
   shared_preferences: ^2.3.3
   
+  # State management
+  provider: ^6.1.2
+  
   # Smooth page transitions
-  smooth_page_indicator: ^1.2.0+3
+  smooth_page_indicator: ^2.0.1
   
   # Social authentication
-  google_sign_in: ^6.2.1
-  sign_in_with_apple: ^6.1.3
+  google_sign_in: ^6.2.2
+  sign_in_with_apple: ^7.0.1
   
   # URL launcher for external links
   url_launcher: ^6.3.1
@@ -59,7 +62,14 @@ dependencies:
   path_provider: ^2.1.5
   
   # Audio player for OpenAI TTS
-  just_audio: ^0.9.40
+  just_audio: ^0.10.5
+  
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.4
+  firebase_messaging: ^15.1.3
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +81,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
